Server: Add Ollama API integration with request and response DTOs, service interfaces, and configuration